clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__divcmp_3.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/divcmp-3.c" (c, x86_64-unknown-linux-gnu)
fn test1(%arg11: s8i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg11: s8i):
        %193 = alloca s8i, "x", align 1
        %194 = alloca s32i, "__retval", align 4
        store %arg11, %193
        %195 = load %193 : s8i, align 1
        %196 = cast(integral) %195 : s32i
        %197 = const 100 : s32i
        div
        %199 = const 3 : s32i
        cmp
        %201 = cast(bool_to_int) %200 : s32i
        store %201, %194
        %202 = load %194 : s32i
        return %202
}
fn test1u(%arg10: u8i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg10: u8i):
        %183 = alloca u8i, "x", align 1
        %184 = alloca s32i, "__retval", align 4
        store %arg10, %183
        %185 = load %183 : u8i, align 1
        %186 = cast(integral) %185 : s32i
        %187 = const 100 : s32i
        div
        %189 = const 3 : s32i
        cmp
        %191 = cast(bool_to_int) %190 : s32i
        store %191, %184
        %192 = load %184 : s32i
        return %192
}
fn test2(%arg9: s8i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg9: s8i):
        %173 = alloca s8i, "x", align 1
        %174 = alloca s32i, "__retval", align 4
        store %arg9, %173
        %175 = load %173 : s8i, align 1
        %176 = cast(integral) %175 : s32i
        %177 = const 100 : s32i
        div
        %179 = const 3 : s32i
        cmp
        %181 = cast(bool_to_int) %180 : s32i
        store %181, %174
        %182 = load %174 : s32i
        return %182
}
fn test2u(%arg8: u8i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg8: u8i):
        %163 = alloca u8i, "x", align 1
        %164 = alloca s32i, "__retval", align 4
        store %arg8, %163
        %165 = load %163 : u8i, align 1
        %166 = cast(integral) %165 : s32i
        %167 = const 100 : s32i
        div
        %169 = const 3 : s32i
        cmp
        %171 = cast(bool_to_int) %170 : s32i
        store %171, %164
        %172 = load %164 : s32i
        return %172
}
fn test3(%arg7: s8i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg7: s8i):
        %153 = alloca s8i, "x", align 1
        %154 = alloca s32i, "__retval", align 4
        store %arg7, %153
        %155 = load %153 : s8i, align 1
        %156 = cast(integral) %155 : s32i
        %157 = const 100 : s32i
        div
        %159 = const 3 : s32i
        cmp
        %161 = cast(bool_to_int) %160 : s32i
        store %161, %154
        %162 = load %154 : s32i
        return %162
}
fn test3u(%arg6: u8i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg6: u8i):
        %143 = alloca u8i, "x", align 1
        %144 = alloca s32i, "__retval", align 4
        store %arg6, %143
        %145 = load %143 : u8i, align 1
        %146 = cast(integral) %145 : s32i
        %147 = const 100 : s32i
        div
        %149 = const 3 : s32i
        cmp
        %151 = cast(bool_to_int) %150 : s32i
        store %151, %144
        %152 = load %144 : s32i
        return %152
}
fn test4(%arg5: s8i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg5: s8i):
        %133 = alloca s8i, "x", align 1
        %134 = alloca s32i, "__retval", align 4
        store %arg5, %133
        %135 = load %133 : s8i, align 1
        %136 = cast(integral) %135 : s32i
        %137 = const 100 : s32i
        div
        %139 = const 3 : s32i
        cmp
        %141 = cast(bool_to_int) %140 : s32i
        store %141, %134
        %142 = load %134 : s32i
        return %142
}
fn test4u(%arg4: u8i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg4: u8i):
        %123 = alloca u8i, "x", align 1
        %124 = alloca s32i, "__retval", align 4
        store %arg4, %123
        %125 = load %123 : u8i, align 1
        %126 = cast(integral) %125 : s32i
        %127 = const 100 : s32i
        div
        %129 = const 3 : s32i
        cmp
        %131 = cast(bool_to_int) %130 : s32i
        store %131, %124
        %132 = load %124 : s32i
        return %132
}
fn test5(%arg3: s8i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg3: s8i):
        %113 = alloca s8i, "x", align 1
        %114 = alloca s32i, "__retval", align 4
        store %arg3, %113
        %115 = load %113 : s8i, align 1
        %116 = cast(integral) %115 : s32i
        %117 = const 100 : s32i
        div
        %119 = const 3 : s32i
        cmp
        %121 = cast(bool_to_int) %120 : s32i
        store %121, %114
        %122 = load %114 : s32i
        return %122
}
fn test5u(%arg2: u8i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: u8i):
        %103 = alloca u8i, "x", align 1
        %104 = alloca s32i, "__retval", align 4
        store %arg2, %103
        %105 = load %103 : u8i, align 1
        %106 = cast(integral) %105 : s32i
        %107 = const 100 : s32i
        div
        %109 = const 3 : s32i
        cmp
        %111 = cast(bool_to_int) %110 : s32i
        store %111, %104
        %112 = load %104 : s32i
        return %112
}
fn test6(%arg1: s8i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: s8i):
        %93 = alloca s8i, "x", align 1
        %94 = alloca s32i, "__retval", align 4
        store %arg1, %93
        %95 = load %93 : s8i, align 1
        %96 = cast(integral) %95 : s32i
        %97 = const 100 : s32i
        div
        %99 = const 3 : s32i
        cmp
        %101 = cast(bool_to_int) %100 : s32i
        store %101, %94
        %102 = load %94 : s32i
        return %102
}
fn test6u(%arg0: u8i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: u8i):
        %83 = alloca u8i, "x", align 1
        %84 = alloca s32i, "__retval", align 4
        store %arg0, %83
        %85 = load %83 : u8i, align 1
        %86 = cast(integral) %85 : s32i
        %87 = const 100 : s32i
        div
        %89 = const 3 : s32i
        cmp
        %91 = cast(bool_to_int) %90 : s32i
        store %91, %84
        %92 = load %84 : s32i
        return %92
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i, "c", align 4
        %2 = const 0 : s32i
        store %2, %0
        scope {
                %5 = const -128 : s32i
                store %5, %1, align 4
                for cond {
                        %80 = load %1 : s32i, align 4
                        %81 = const 256 : s32i
                        cmp
                        condition %82
                } step {
                        %6 = load %1 : s32i, align 4
                        inc
                        store %7, %1, align 4
                        yield
                } body {
                        scope {
                                scope {
                                        %74 = load %1 : s32i, align 4
                                        %75 = cast(integral) %74 : s8i
                                        %76 = call @test1(%75) : s32i [all]
                                        %77 = const 0 : s32i
                                        cmp
                                        if %78 {
                                                %79 = get_global @abort : () -> void*
                                                call @abort() [all]
                                                yield
                                        }
                                        yield
                                }
                                scope {
                                        %68 = load %1 : s32i, align 4
                                        %69 = cast(integral) %68 : u8i
                                        %70 = call @test1u(%69) : s32i [all]
                                        %71 = const 0 : s32i
                                        cmp
                                        if %72 {
                                                %73 = get_global @abort : () -> void*
                                                call @abort() [all]
                                                yield
                                        }
                                        yield
                                }
                                scope {
                                        %62 = load %1 : s32i, align 4
                                        %63 = cast(integral) %62 : s8i
                                        %64 = call @test2(%63) : s32i [all]
                                        %65 = const 1 : s32i
                                        cmp
                                        if %66 {
                                                %67 = get_global @abort : () -> void*
                                                call @abort() [all]
                                                yield
                                        }
                                        yield
                                }
                                scope {
                                        %56 = load %1 : s32i, align 4
                                        %57 = cast(integral) %56 : u8i
                                        %58 = call @test2u(%57) : s32i [all]
                                        %59 = const 1 : s32i
                                        cmp
                                        if %60 {
                                                %61 = get_global @abort : () -> void*
                                                call @abort() [all]
                                                yield
                                        }
                                        yield
                                }
                                scope {
                                        %50 = load %1 : s32i, align 4
                                        %51 = cast(integral) %50 : s8i
                                        %52 = call @test3(%51) : s32i [all]
                                        %53 = const 1 : s32i
                                        cmp
                                        if %54 {
                                                %55 = get_global @abort : () -> void*
                                                call @abort() [all]
                                                yield
                                        }
                                        yield
                                }
                                scope {
                                        %44 = load %1 : s32i, align 4
                                        %45 = cast(integral) %44 : u8i
                                        %46 = call @test3u(%45) : s32i [all]
                                        %47 = const 1 : s32i
                                        cmp
                                        if %48 {
                                                %49 = get_global @abort : () -> void*
                                                call @abort() [all]
                                                yield
                                        }
                                        yield
                                }
                                scope {
                                        %38 = load %1 : s32i, align 4
                                        %39 = cast(integral) %38 : s8i
                                        %40 = call @test4(%39) : s32i [all]
                                        %41 = const 1 : s32i
                                        cmp
                                        if %42 {
                                                %43 = get_global @abort : () -> void*
                                                call @abort() [all]
                                                yield
                                        }
                                        yield
                                }
                                scope {
                                        %32 = load %1 : s32i, align 4
                                        %33 = cast(integral) %32 : u8i
                                        %34 = call @test4u(%33) : s32i [all]
                                        %35 = const 1 : s32i
                                        cmp
                                        if %36 {
                                                %37 = get_global @abort : () -> void*
                                                call @abort() [all]
                                                yield
                                        }
                                        yield
                                }
                                scope {
                                        %26 = load %1 : s32i, align 4
                                        %27 = cast(integral) %26 : s8i
                                        %28 = call @test5(%27) : s32i [all]
                                        %29 = const 0 : s32i
                                        cmp
                                        if %30 {
                                                %31 = get_global @abort : () -> void*
                                                call @abort() [all]
                                                yield
                                        }
                                        yield
                                }
                                scope {
                                        %20 = load %1 : s32i, align 4
                                        %21 = cast(integral) %20 : u8i
                                        %22 = call @test5u(%21) : s32i [all]
                                        %23 = const 0 : s32i
                                        cmp
                                        if %24 {
                                                %25 = get_global @abort : () -> void*
                                                call @abort() [all]
                                                yield
                                        }
                                        yield
                                }
                                scope {
                                        %14 = load %1 : s32i, align 4
                                        %15 = cast(integral) %14 : s8i
                                        %16 = call @test6(%15) : s32i [all]
                                        %17 = const 0 : s32i
                                        cmp
                                        if %18 {
                                                %19 = get_global @abort : () -> void*
                                                call @abort() [all]
                                                yield
                                        }
                                        yield
                                }
                                scope {
                                        %8 = load %1 : s32i, align 4
                                        %9 = cast(integral) %8 : u8i
                                        %10 = call @test6u(%9) : s32i [all]
                                        %11 = const 0 : s32i
                                        cmp
                                        if %12 {
                                                %13 = get_global @abort : () -> void*
                                                call @abort() [all]
                                                yield
                                        }
                                        yield
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        %3 = const 0 : s32i
        store %3, %0
        %4 = load %0 : s32i
        return %4
}
