clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__divconst_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/divconst-1.c" (c, x86_64-unknown-linux-gnu)
fn f(%arg0: rec_t1*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: rec_t1*):
        %29 = alloca rec_t1*, "ps", align 8
        store %arg0, %29
        %30 = const 10000 : u32i
        %31 = load %29 : rec_t1*, align 8
        get_member
        store %30, %32, align 4
        %33 = load %29 : rec_t1*, align 8
        get_member
        %35 = load %34 : u32i, align 4
        %36 = const 3 : u32i
        div
        %38 = load %29 : rec_t1*, align 8
        get_member
        store %37, %39, align 4
        %40 = const 10000 : u32i
        %41 = load %29 : rec_t1*, align 8
        get_member
        store %40, %42, align 4
        %43 = load %29 : rec_t1*, align 8
        get_member
        %45 = load %44 : u32i, align 4
        %46 = const 3 : u32i
        div
        %48 = load %29 : rec_t1*, align 8
        get_member
        store %47, %49, align 4
        return
}
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec_t1, "s", align 4
        %2 = const 0 : s32i
        store %2, %0
        call @f(%1) [all]
        scope {
                get_member
                %7 = load %6 : u32i, align 4
                %8 = const 10000 : u32i
                cmp
                %10 = ternary %9 ? { : bool
                        %28 = const true : bool
                        yield %28
                } : {
                        get_member
                        %25 = load %24 : u32i, align 4
                        %26 = const 3333 : u32i
                        cmp
                        yield %27
                }
                %11 = ternary %10 ? { : bool
                        %23 = const true : bool
                        yield %23
                } : {
                        get_member
                        %20 = load %19 : u32i, align 4
                        %21 = const 10000 : u32i
                        cmp
                        yield %22
                }
                %12 = ternary %11 ? { : bool
                        %18 = const true : bool
                        yield %18
                } : {
                        get_member
                        %15 = load %14 : u32i, align 4
                        %16 = const 3333 : u32i
                        cmp
                        yield %17
                }
                if %12 {
                        %13 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %3 = get_global @exit : (s32i) -> void*
        %4 = const 0 : s32i
        call @exit(%4) [all]
        %5 = load %0 : s32i
        return %5
}
