clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__enum_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/enum-1.c" (c, x86_64-unknown-linux-gnu)
global tok : s32i = 0 [internal, default, align 4, dso_local]

fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %66 = alloca s32i, "__retval", align 4
    %67 = const 0 : s32i
    store %67, %66
    %68 = const 0 : s32i
    %69 = get_global @tok : s32i*
    store %68, %69, align 4
    scope {
        %73 = get_global @atom : (() -> s32i)*
        %74 = call %73() : s32i [all]
        %75 = const 1 : s32i
        %76 = cmp ne %74, %75 : bool
        if %76 {
            %77 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %70 = get_global @exit : ((s32i) -> void)*
    %71 = const 0 : s32i
    call @exit(%71) [all]
    %72 = load %66 : s32i
    return %72
}
fn atom() -> s32i [internal, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    scope {
        %2 = get_global @tok : s32i*
        %3 = load %2 : s32i, align 4
        %4 = const 0 : s32i
        %5 = cmp ge %3, %4 : bool
        %6 = ternary %5 ? { : bool
            %60 = get_global @tok : s32i*
            %61 = load %60 : s32i, align 4
            %62 = const 1 : s32i
            %63 = const 8 : s32i
            %64 = shift left %62, %63 : s32i
            %65 = cmp lt %61, %64 : bool
            yield %65
        } : {
            %59 = const false : bool
            yield %59
        }
        %7 = ternary %6 ? { : bool
            %58 = const true : bool
            yield %58
        } : {
            %54 = get_global @tok : s32i*
            %55 = load %54 : s32i, align 4
            %56 = const 273 : s32i
            %57 = cmp ge %55, %56 : bool
            yield %57
        }
        %8 = ternary %7 ? { : bool
            %53 = const true : bool
            yield %53
        } : {
            %49 = get_global @tok : s32i*
            %50 = load %49 : s32i, align 4
            %51 = const 257 : s32i
            %52 = cmp eq %50, %51 : bool
            yield %52
        }
        %9 = ternary %8 ? { : bool
            %48 = const true : bool
            yield %48
        } : {
            %44 = get_global @tok : s32i*
            %45 = load %44 : s32i, align 4
            %46 = const 258 : s32i
            %47 = cmp eq %45, %46 : bool
            yield %47
        }
        %10 = ternary %9 ? { : bool
            %43 = const true : bool
            yield %43
        } : {
            %39 = get_global @tok : s32i*
            %40 = load %39 : s32i, align 4
            %41 = const 259 : s32i
            %42 = cmp eq %40, %41 : bool
            yield %42
        }
        %11 = ternary %10 ? { : bool
            %38 = const true : bool
            yield %38
        } : {
            %34 = get_global @tok : s32i*
            %35 = load %34 : s32i, align 4
            %36 = const 260 : s32i
            %37 = cmp eq %35, %36 : bool
            yield %37
        }
        %12 = ternary %11 ? { : bool
            %33 = const true : bool
            yield %33
        } : {
            %29 = get_global @tok : s32i*
            %30 = load %29 : s32i, align 4
            %31 = const 261 : s32i
            %32 = cmp eq %30, %31 : bool
            yield %32
        }
        %13 = ternary %12 ? { : bool
            %28 = const true : bool
            yield %28
        } : {
            %24 = get_global @tok : s32i*
            %25 = load %24 : s32i, align 4
            %26 = const 262 : s32i
            %27 = cmp eq %25, %26 : bool
            yield %27
        }
        %14 = ternary %13 ? { : bool
            %23 = const true : bool
            yield %23
        } : {
            %19 = get_global @tok : s32i*
            %20 = load %19 : s32i, align 4
            %21 = const 263 : s32i
            %22 = cmp eq %20, %21 : bool
            yield %22
        }
        if %14 {
            %17 = const 1 : s32i
            store %17, %0
            %18 = load %0 : s32i
            return %18
        } else {
            %15 = const 0 : s32i
            store %15, %0
            %16 = load %0 : s32i
            return %16
        }
        yield
    }
    %1 = load %0 : s32i
    return %1
}
