clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__enum_2.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/enum-2.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i, "i", align 4
        %2 = const 0 : s32i
        store %2, %0
        scope {
                %6 = const 1 : s32i
                store %6, %1, align 4
                for cond {
                        %13 = load %1 : s32i, align 4
                        %14 = const 0 : s32i
                        cmp
                        condition %15
                } step {
                        %7 = load %1 : s32i, align 4
                        dec
                        store %8, %1, align 4
                        yield
                } body {
                        scope {
                                %9 = load %1 : s32i, align 4
                                %10 = const -1 : s32i
                                cmp
                                if %11 {
                                        %12 = get_global @abort : () -> void*
                                        call @abort() [all]
                                        yield
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        %3 = get_global @exit : (s32i) -> void*
        %4 = const 0 : s32i
        call @exit(%4) [all]
        %5 = load %0 : s32i
        return %5
}
